<resources>
    <string name="app_name">To do</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_available">No data available</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_priority">Priority</string>
    <string name="delete_all">Delete All</string>
    <string name="sort_by">Sort By</string>
    <string name="save">Save</string>
    <string name="update">Update</string>

    <string-array name="priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>