<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/search"
        android:iconTint="@color/white"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

<group android:id="@+id/group_sort">
    <item
        android:id="@+id/menu_sortBy"
        android:title="@string/sort_by">

        <menu>
            <item
                android:id="@+id/action_sortByName"
                android:title="@string/sort_by_name"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_sortByPriority"
                android:title="@string/sort_by_priority"
                app:showAsAction="never" />
        </menu>
    </item>
</group>
<item
    android:id="@+id/action_delete_all"
    android:title="@string/delete_all"
    app:showAsAction="never" /><!---->
</menu>